# CS6850Project

./: .gitignore  README.md  brute_force_impl.py  greedy_lp_compare.py  gurobi_global.py  optimized_impl.py  plot_utils.py  pyproject.toml  ratio_hist.py  utils.py  vamana.py
plots/: 3d_minimum_cover_250.html
