[project]
name = "cs6850project"
version = "0.1.0"
description = "pruning edges for minimal navigable graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gurobipy>=12.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pip>=24.3.1",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
